Fix overflow problems

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -15,6 +15,8 @@ $theme-colors: (
 html, body {
     height: 100%;
     line-height: normal !important;
+    overflow: auto;
+    line-break: anywhere;
 }
 
 body, .modal-content, input, .form-control {
